// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CareProgressTrack > рисует полный, средний и пустой прогресс 1`] = `
<div>
  <div
    style="min-width: 0px; width: 100%;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
      role="progressbar"
      style="width: 100%;"
    >
      <div
        class="ant-progress-outer"
        style="width: 100%;"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg ant-progress-bg-outer"
            style="width: 100%; height: 6px; --progress-line-stroke-color: #52c41a; background: rgb(82, 196, 26); --progress-percent: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CareProgressTrack > рисует полный, средний и пустой прогресс 2`] = `
<div>
  <div
    style="min-width: 0px; width: 100%;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
      role="progressbar"
      style="width: 100%;"
    >
      <div
        class="ant-progress-outer"
        style="width: 100%;"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg ant-progress-bg-outer"
            style="width: 50%; height: 6px; --progress-line-stroke-color: #fa8c16; background: rgb(250, 140, 22); --progress-percent: 0.5;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CareProgressTrack > рисует полный, средний и пустой прогресс 3`] = `
<div>
  <div
    style="min-width: 0px; width: 100%;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-small"
      role="progressbar"
      style="width: 100%;"
    >
      <div
        class="ant-progress-outer"
        style="width: 100%;"
      >
        <div
          class="ant-progress-inner"
          style="background-color: rgb(255, 77, 79);"
        >
          <div
            class="ant-progress-bg ant-progress-bg-outer"
            style="width: 0%; height: 6px; --progress-line-stroke-color: #ff4d4f; background: rgb(255, 77, 79); --progress-percent: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
